--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,8 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: "G-L0885W521V" # Format: UA-xxxxxx-xx
-ga_domain: demo.hicairo.com
+# ga_track_id: "G-L0885W521V" # Format: UA-xxxxxx-xx
+# ga_domain: demo.hidoha.net
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
