--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: HiFeng'Blog
-SEOTitle: HiFeng'Blog_记录学习中的点点滴滴......
+title: HiFeng's Blog
+SEOTitle: HiFeng's Blog_记录学习中的点点滴滴......
 header-img: img/home-bg.jpg
 email: webmaster@hicairo.com
-description: "HiFeng'Blog_记录学习中的点点滴滴......"
+description: "HiFeng's Blog_记录学习中的点点滴滴......"
 keyword: "linux,debian,gentoo,ubuntu,redhat,centos,fedora,arch linux,openSuse,shell,bash,database,php,vps,v2ray,xray,vmess,vless,trojan,hysteria,naive,wireguard"
 url: "https://demo.hidoha.net" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
