--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ netease_comment: false
 # ga_domain: demo.hidoha.net
 
 # Sidebar settings
-sidebar: false # whether or not using Sidebar.true
+sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "好好工作 快乐生活 ... <br> Contact me "
 sidebar-avatar: https://github.com/Hiifeng.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
