--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ netease_comment: false
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "好好工作 快乐生活 ... <br> Contact me "
-sidebar-avatar: https://github.com/Hiifeng.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/Hiifeng.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
