--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ page-mathjax: false
 friends:
   [
     { title: "HiFeng's Blog", href: "http://www.hicairo.com" },
-#    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
+    { title: "新月的博客", href: "https://blog.a--i.eu.org" },
 #    { title: "Kun Qian", href: "http://kunq.me" },
 #    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
 #    { title: "SmdCn", href: "http://blog.smdcn.net" },
